update og images

--- a/sharing.html
+++ b/sharing.html
@@ -8,7 +8,7 @@
     <meta content="Audovia is an Open Source software application for
       making music with up to 15 instrumental voices and a percussion
       track." name="description">
-    <meta property="og:image" content="image/SongBaseWebsite.png">
+    <meta property="og:image" content="image/AudoviaSharing.png">
     <!--
    <script type="text/javascript">
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -168,9 +168,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -327,6 +331,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       <a href="https://github.com/SongBase/Audovia"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -355,10 +361,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -381,6 +391,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 border-color: #551A8B; padding:5px; cursor:pointer"><font
@@ -394,10 +406,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
 
 
 
@@ -580,6 +596,8 @@ myAudioitem.pause();
 
 
 
+
+
                             Connections</span> form to enter the
                           connection parameters obtained from your
                           Database as a Service provider.&nbsp; Then use
@@ -607,6 +625,8 @@ myAudioitem.pause();
                                 style="font-style: italic;"><a
                                   href="https://uk.godaddy.com/legal-agreements.aspx?ci=&amp;otab=2"
                                   class="nounderline" target="_blank">Universal
+
+
 
 
 
