--- a/sharing.html
+++ b/sharing.html
@@ -170,9 +170,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
 
 
 
@@ -333,6 +335,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                       <a href="https://github.com/SongBase/Audovia"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -363,10 +366,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
 
 
 
@@ -393,6 +398,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 border-color: #551A8B; padding:5px; cursor:pointer"><font
@@ -408,10 +414,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
 
 
 
@@ -598,6 +606,7 @@ myAudioitem.pause();
 
 
 
+
                             Connections</span> form to enter the
                           connection parameters obtained from your
                           Database as a Service provider.&nbsp; Then use
@@ -617,29 +626,23 @@ myAudioitem.pause();
                           accounts.<br>
                           <br>
                         </span>
-                        <div class="left"><span class="body">You are
-                            welcome to connect to the above database if
-                            you would like to publish your songs.&nbsp;
-                            Just make sure you comply with GoDaddy's <span
-                              style="font-weight: bold;"><span
-                                style="font-style: italic;"><a
-                                  href="https://uk.godaddy.com/legal-agreements.aspx?ci=&amp;otab=2"
-                                  class="nounderline" target="_blank">Universal
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                                  Terms of Service Agreement</a></span></span>
+                        <div class="left"><span class="body">If you
+                            connect to a MySQL database, you will have a
+                            <span style="font-style: italic;">User</span>
+                            menu item.&nbsp; Use <span
+                              style="font-style: italic;">User/Create</span><span
+                              style="font-style: italic;"> Account</span>
+                            to create an account and <span
+                              style="font-style: italic;">User/Log</span><span
+                              style="font-style: italic;"> in</span> to
+                            log in to your account.&nbsp; You can use <span
+                              style="font-style: italic;">User/Share</span><span
+                              style="font-style: italic;"> Song</span>
+                            to share a selected song with your
+                            colleagues.&nbsp;<span style="font-weight:
+                              bold;"><span style="font-style: italic;"><a
+href="https://uk.godaddy.com/legal-agreements.aspx?ci=&amp;otab=2"
+                                  class="nounderline" target="_blank"></a></span></span>
                           </span></div>
                       </div>
                     </blockquote>
