--- a/demonstration.html
+++ b/demonstration.html
@@ -182,9 +182,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
 
 
 
@@ -371,6 +373,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                       <a href="https://github.com/SongBase/Audovia"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -404,6 +407,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -422,10 +426,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 border-color: #551A8B; padding:5px; cursor:pointer"><font
                   color="#551A8B" face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
+
 
 
 
@@ -459,10 +465,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
 
 
 
@@ -666,6 +674,7 @@ src="https://player.vimeo.com/video/132335980?title=0&amp;byline=0&amp;portrait=
 
 
 
+
                           Select "Song" and press Play to play back your
                           music.&nbsp; From the <em>File</em> menu, you
                           can export to MIDI, MusicXML or WAV for music
@@ -675,10 +684,7 @@ src="https://player.vimeo.com/video/132335980?title=0&amp;byline=0&amp;portrait=
                             href="http://audacity.sourceforge.net/"><span
                               style="font-style: italic;"><span
                                 style="font-weight: bold;">Audacity</span></span></a>,
-                          then exported to MP3.&nbsp; Please see the <strong><em><a
-href="doc/AudoviaDocumentation-3-0-5.pdf" class="nounderline"
-                                target="_blank">Documentation</a></em></strong>
-                          for more details.<br>
+                          then exported to MP3.<br>
                           <br style="clear:right;">
                           <br>
                         </span></div>
