--- a/index.html
+++ b/index.html
@@ -105,9 +105,17 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
+
+
 
 
 
@@ -126,6 +134,10 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
+
+
 
 
 
@@ -158,6 +170,10 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                 style="background-color:#eeeeee; border-color: #551A8B;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
+
+
+
+
 
 
 
@@ -232,10 +248,18 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
+
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
+
+
+
+
 
 
 
@@ -305,10 +329,18 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
+
+
 
 
 
@@ -452,6 +484,10 @@ myAudioitem.pause();
 
 
 
+
+
+
+
                         Songs can have up to 15 instrumental voices and
                         a percussion track with instruments chosen from
                         a soundbank of 128 instruments.&nbsp; Either the
@@ -486,6 +522,7 @@ href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3
                                 style="border: 0px solid; border: 0px
                                 solid; width: 108px; height: 34px;
                                 margin-bottom: 12px;" align="middle"></a>
+                            <!--
                             <a
 href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_i386.deb"><img
                                 alt="Linux (32-bit)"
@@ -493,9 +530,22 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_i3
                                 style="border: 0px solid; border: 0px
                                 solid; width: 142px; height: 34px;
                                 margin-bottom: 12px;" align="middle"></a>
+--> <a href="https://apps.ubuntu.com/cat/applications/audovia/"
+                              target="_blank"><img alt="Linux (32-bit)"
+                                src="image/Linux%2832-bit%29.png"
+                                style="border: 0px solid; border: 0px
+                                solid; width: 142px; height: 34px;
+                                margin-bottom: 12px;" align="middle"></a>
+                            <!--
                             <a
 href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_amd64.deb"><img
                                 alt="Linux (64-bit)"
+                                src="image/Linux%2864-bit%29.png"
+                                style="border: 0px solid; border: 0px
+                                solid; width: 142px; height: 34px;
+                                margin-bottom: 12px;" align="middle"></a>
+--> <a href="https://apps.ubuntu.com/cat/applications/audovia/"
+                              target="_blank"><img alt="Linux (64-bit)"
                                 src="image/Linux%2864-bit%29.png"
                                 style="border: 0px solid; border: 0px
                                 solid; width: 142px; height: 34px;
@@ -521,6 +571,10 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                               href="http://java.com/"
                               class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a>
                             or, if you are using Linux Ubuntu,<strong> </strong>you
+
+
+
+
 
 
 
