--- a/index.html
+++ b/index.html
@@ -86,9 +86,15 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
+
 
 
 
@@ -100,6 +106,9 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
+
 
 
 
@@ -130,10 +139,16 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
+
+
 
 
 
@@ -148,6 +163,9 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -157,10 +175,16 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
+
 
 
 
@@ -176,8 +200,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                 <tr>
                   <td valign="top">
                     <blockquote><span class="body"><strong></strong>Make
-                        music on your Microsoft Windows or Linux laptop
-                        or PC with <span style="font-weight: bold;">Audovia</span>.&nbsp;
+                        music on your laptop or PC with <span
+                          style="font-weight: bold;">Audovia</span>.&nbsp;
+
+
+
 
 
 
@@ -204,12 +231,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           for more details.<br>
                           <br style="clear:right;">
                           <br>
-                          <div style="text-align: center; ">
+                          <div style="margin-left: 40px;">
                             <!--<form style="text-align: center;"
                             action="https://www.paypal.com/cgi-bin/webscr"
                             method="post" target="_top"> --><span
                               class="fullsize"><em>Download Audovia
-                                3.0.8</em> &nbsp;</span> <a
+                                3.0.8 for</em> &nbsp;</span> <a
 href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-8.msi"><img
                                 alt="Windows" src="image/Windows.png"
                                 style="border: 0px solid; border: 0px
@@ -223,12 +250,13 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_i3
                                 style="border: 0px solid; border: 0px
                                 solid; width: 142px; height: 34px;
                                 margin-bottom: 12px;" align="middle"></a>
---> <a href="https://apps.ubuntu.com/cat/applications/audovia/"
+-->
+                            <!--<a href="https://apps.ubuntu.com/cat/applications/audovia/"
                               target="_blank"><img alt="Linux (32-bit)"
                                 src="image/Linux%2832-bit%29.png"
                                 style="border: 0px solid; border: 0px
                                 solid; width: 142px; height: 34px;
-                                margin-bottom: 12px;" align="middle"></a>
+                                margin-bottom: 12px;" align="middle"></a> -->
                             <!--
                             <a
 href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_amd64.deb"><img
@@ -237,12 +265,14 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                                 style="border: 0px solid; border: 0px
                                 solid; width: 142px; height: 34px;
                                 margin-bottom: 12px;" align="middle"></a>
---> <a href="https://apps.ubuntu.com/cat/applications/audovia/"
+-->
+                            <!--
+<a href="https://apps.ubuntu.com/cat/applications/audovia/"
                               target="_blank"><img alt="Linux (64-bit)"
                                 src="image/Linux%2864-bit%29.png"
                                 style="border: 0px solid; border: 0px
                                 solid; width: 142px; height: 34px;
-                                margin-bottom: 12px;" align="middle"></a>
+                                margin-bottom: 12px;" align="middle"></a> -->
                             <!--<input name="cmd" value="_s-xclick"
                               type="hidden"> <input
                               name="hosted_button_id"
@@ -257,13 +287,19 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                               border="0" width="1" height="1"> </form>-->
                           </div>
                         </span><br>
-                        <div class="left"><span class="body"> Before
-                            running <strong>Audovia</strong> on
+                        <div class="left"><span class="body"> The Linux
+                            version is available from the Ubuntu
+                            Software Center.<br>
+                            <br>
+                            Before running <strong>Audovia</strong> on
                             Microsoft Windows you will first need to
                             install the latest version of Java from <a
                               href="http://java.com/"
                               class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a>
                             or, if you are using Linux Ubuntu,<strong> </strong>you
+
+
+
 
 
 
