--- a/index.html
+++ b/index.html
@@ -89,9 +89,25 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
+
+
+
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
+
+
+
+
+
+
 
 
 
@@ -106,6 +122,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
+
+
+
+
+
+
 
 
 
@@ -142,10 +166,26 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
+
+
+
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
+
+
+
+
+
+
+
 
 
 
@@ -166,10 +206,26 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
+
+
+
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
+
+
+
+
+
+
+
+
 
 
 
@@ -190,6 +246,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
+
+
+
+
+
                       Us</b></big></font></button></a> </td>
         </tr>
         <tr>
@@ -202,6 +266,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                     <blockquote><span class="body"><strong></strong>Make
                         music on your laptop or PC with <span
                           style="font-weight: bold;">Audovia</span>.&nbsp;
+
+
+
+
+
+
+
+
 
 
 
@@ -230,18 +302,27 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                                 class="nounderline" target="_blank">Documentation</a></em></strong>
                           for more details.<br>
                           <br style="clear:right;">
-                          <br>
+                          <!-- <br> -->
                           <div style="margin-left: 40px;">
                             <!--<form style="text-align: center;"
                             action="https://www.paypal.com/cgi-bin/webscr"
                             method="post" target="_top"> --><span
-                              class="fullsize"><em>Download Audovia
-                                3.0.8 for</em> &nbsp;</span> <a
+                              class="fullsize"><em>Audovia 3.0.8 for
+                                Windows</em> &nbsp;</span>
+                            <!--
+<a
 href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-8.msi"><img
                                 alt="Windows" src="image/Windows.png"
                                 style="border: 0px solid; border: 0px
                                 solid; width: 108px; height: 34px;
-                                margin-bottom: 12px;" align="middle"></a>
+                                margin-bottom: 12px;" align="middle"></a> -->
+                            <a
+href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-8.msi"
+                              style="text-decoration:none;"><button
+                                type="button"
+                                style="background-color:#eeeeee;
+                                padding:5px; cursor:pointer"><font
+                                  color="#551A8B" face="Verdana"><big><b>Download</b></big></font></button></a>
                             <!--
                             <a
 href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_i386.deb"><img
@@ -297,6 +378,14 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                               href="http://java.com/"
                               class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a>
                             or, if you are using Linux Ubuntu,<strong> </strong>you
+
+
+
+
+
+
+
+
 
 
 
