--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
 
 
 
@@ -122,6 +124,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
 
 
 
@@ -174,10 +177,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
 
 
 
@@ -214,6 +219,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -234,10 +240,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
 
 
 
@@ -280,6 +288,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         Songs can have up to 15 instrumental voices and
                         a percussion track with instruments chosen from
                         a soundbank of 128 instruments.&nbsp; Either the
@@ -295,12 +304,17 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         numerically.&nbsp; You can use notes from C0 to
                         G10, corresponding to MIDI values 0 to
                         127.&nbsp; Middle C is C5.<br>
+                        <br>
+                        <span style="font-weight: bold;">Audovia</span>
+                        will play back your music and also export to
+                        MIDI, MusicXML and WAV files for music
+                        processing and music publishing.<br>
                       </span><br>
                       <div class="left"><span class="body"> Please see
                           the <strong><em><a
                                 href="doc/AudoviaDocumentation-3-0-8.pdf"
                                 class="nounderline" target="_blank">Documentation</a></em></strong>
-                          for more details.<br>
+                          for more information.<br>
                           <br style="clear:right;">
                           <!-- <br> -->
                           <div style="margin-left: 40px;">
@@ -378,6 +392,7 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                               href="http://java.com/"
                               class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a>
                             or, if you are using Linux Ubuntu,<strong> </strong>you
+
 
 
 
