--- a/index.html
+++ b/index.html
@@ -98,9 +98,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -124,6 +128,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -178,10 +184,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -220,10 +230,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -262,6 +276,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       Us</b></big></font></button></a> </td>
         </tr>
         <tr>
@@ -274,6 +290,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                     <blockquote><span class="body"><strong></strong>Make
                         music on your laptop or PC with <span
                           style="font-weight: bold;">Audovia</span>.&nbsp;
+
+
 
 
 
@@ -407,23 +425,14 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
 
 
 
-                            will need to execute the following commands
-                            to install Oracle's Java.<br>
-                            <br>
-                          </span>
-                          <div style="margin-left: 40px;"><span
-                              class="body"> <span style="font-style:
-                                italic;">sudo add-apt-repository
-                                ppa:webupd8team/java</span></span><span
-                              style="font-style: italic;"><br>
-                            </span><span style="font-style: italic;"><span
-                                class="body">sudo apt-get update</span></span><span
-                              style="font-style: italic;"><br>
-                            </span><span style="font-style: italic;"><span
-                                class="body">sudo apt-get install
-                                oracle-java8-installer </span></span><br>
-                            <span class="body"></span></div>
-                          <span class="body"><br>
+
+
+                            will need to install Oracle's Java 8 from <span
+                              style="font-weight: bold;"><a
+                                href="https://launchpad.net/%7Ewebupd8team/+archive/ubuntu/java"
+                                class="nounderline" target="_blank"><span
+                                  style="font-style: italic;">WebUpd8</span></a></span>.<br>
+                          </span><span class="body"><br>
                             For best results on Linux Ubuntu, we
                             recommend using the Gnome Desktop
                             Environment.<br>
