--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta content="Audovia is an Open Source software application for
       making music with up to 15 instrumental voices and a percussion
       track." name="description">
-    <meta property="og:image" content="image/AudoviaHome.png">
+    <meta property="og:image"
+      content="http://audovia.com/image/AudoviaHome.png">
     <style type="text/css">
 
       body {background-color: #FFFFFF; color: #000000;}
@@ -100,9 +101,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -128,6 +133,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -186,10 +193,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -232,10 +243,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -278,6 +293,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       Us</b></big></font></button></a> </td>
         </tr>
         <tr>
@@ -290,6 +307,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                     <blockquote><span class="body"><strong></strong>Make
                         music on your laptop or PC with <span
                           style="font-weight: bold;">Audovia</span>.&nbsp;
+
+
 
 
 
@@ -410,6 +429,8 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                               href="http://java.com/"
                               class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a>
                             or, if you are using Linux Ubuntu,<strong> </strong>you
+
+
 
 
 
