--- a/examples.html
+++ b/examples.html
@@ -10,6 +10,10 @@
       track." name="description">
     <meta property="og:image"
       content="http://audovia.com/image/AudoviaExamples.png">
+    <meta property="og:title" content="Audovia">
+    <meta property="og:description" content="Audovia is an Open Source
+      software application for making music with up to 15 instrumental
+      voices and a percussion track.">
     <!--
     <script type="text/javascript">
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -170,9 +174,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -333,6 +341,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       <a href="https://github.com/SongBase/Audovia"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -364,10 +374,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 border-color: #551A8B; padding:5px; cursor:pointer"><font
                   color="#551A8B" face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -396,6 +410,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -412,10 +428,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
 
 
 
